<resources>
    <string name="app_name">ICCB DE</string>
    <string name="head">১.    [নির্বাচিত অংশগ্রহণকারীদের পড়ে শোনান]</string>
    <string name="consent_text">ব্র্যাক বিশ্ববিদ্যালয়ের পক্ষ থেকে আমরা গাইবান্ধায় তামাক ও তামাকজাত দ্রব্য সেবন সম্পর্কে তথ্য সংগ্রহ করছি। সংগ্রহীত তথ্য শুধুমাত্র জনসাস্থ্য খাতে গবেষণার কাজে ব্যাবহৃত হবে।
দৈবচয়ন ভিত্তিতে আপনার পরিবারকে নির্বাচন করা হয়েছে। আপনার উত্তর একটি বৃহৎ জনগোষ্ঠীর প্রতিনিধিত্ব করবে, সুতরাং এটি আমাদের সাথে সাথে সমাজের কাছেও অনেক গুরুত্বপূর্ণ। সাক্ষাৎকারটি সম্পন্ন করতে ৯০ মিনিট সময় প্রয়োজন হবে। এই জরিপটিতে অংশগ্রহণ করা সম্পূর্ণই আপনার ইচ্ছাধীন। আপনি যে সকল তথ্য প্রদান করবেন তা সম্পূর্ণরূপে গোপন রাখা হবে এবং তা দিয়ে কোনভাবেই আপনার পরিচয় খুঁজে বের করা যাবে না। আপনার ব্যাক্তিগত তথ্য অন্য কাউকে বা অন্য কোন পরিবারকে দেয়া হবে না। আপনি যেকোনো সময় এই জরিপে অংশগ্রহণ করা থেকে নিজেকে প্রত্যাহার করতে পারেন এবং যেকোনো প্রশ্নের উত্তর প্রদান হতেও বিরত থাকতে পারেন।
যদি জরিপটি সংক্রান্ত আপনার কিছু জানার থাকে তবে প্রদত্ত তথ্যের মাধ্যমে আমাদের সাথে যোগাযোগ করুন।
আপনি যদি জরিপটিতে অংশগ্রহণে সম্মতি প্রদান করেন তবে আমরা সাক্ষাৎকার পর্ব শুরু করবো।</string>
    <string name="consent1">২. পরিবার প্রধান কি অংশগ্রহণে সম্মতি প্রদান করছেন?</string>
    <string name="consent2">৩.   স্ত্রী কি অংশগ্রহণে সম্মতি প্রদান করছেন?</string>
    <string name="ha">হ্যা</string>
    <string name="na">না</string>
    <string name="ha_goTo3">হ্যা - ৩ নং এ যান</string>
    <string name="na_end">না -  সাক্ষাৎকার শেষ করুন</string>
    <string name="ha_start">হ্যা  - সাক্ষাৎকার শুরু করুন</string>
    <string name="HV001">HV001: পরিবার প্রধানের নাম</string>
    <string name="Section_1">১ম বিভাগঃ পরিচয়</string>
    <string name="SID">জরিপ</string>
    <string name="SID_1">Baseline</string>
    <string name="SID_2">Endline</string>
    <string name="HHID">HHID</string>
    <string name="HV002">স্ত্রীর নাম</string>
    <string name="HV003">ধর্ম</string>
    <string name="HV003_1">মুসলমান</string>
    <string name="HV003_2">হিন্দু</string>
    <string name="HV003_3">খৃষ্টান</string>
    <string name="HV003_4">বুদ্ধ</string>
    <string name="HV003_5">অন্যান্য</string>
    <string name="HV005">চর কোড</string>
    <string name="HV005_1">জিয়াডাঙ্গা</string>
    <string name="HV005_2">তিন থপা</string>
    <string name="HV005_3">পূর্ব কঞ্চি পাড়া</string>
    <string name="HV005_4">চর হরিচন্ডী</string>
    <string name="HV005_5">জাঞ্জাইর (দক্ষিণ)</string>
    <string name="HV005_6">কিসমত ঢোলী</string>
    <string name="HV005_7">নামাপারা (উত্তর)</string>
    <string name="HV005_8">উত্তর খোলাবাড়ি</string>
    <string name="HV005_9">পশ্চিম আগলার চর</string>
    <string name="HV005_10">জামিরা (দক্ষিণ)</string>
    <string name="HV005_11">কুমারপাড়া</string>
    <string name="HV005_12">আনন্দবাড়ি</string>
    <string name="HV005_13">কালুর পাড়া</string>
    <string name="HV005_14">দেলুয়াবাড়ি (পশ্চিম)</string>
    <string name="HV005_15">টেংরাকান্দি (উত্তর)</string>
    <string name="HV005_16">রাঘব</string>
    <string name="HV005_17">দেলুয়াবাড়ি (পূর্ব)</string>
    <string name="HV005_18">গুয়াবাড়ি</string>
    <string name="HV005_19">গলনা (দক্ষিণ)</string>
    <string name="HV005_20">হাটবাড়ি</string>
    <string name="HV005_21">ভাজনডাঙ্গা</string>
    <string name="HV005_22">মাঘুরি ঘাট</string>
    <string name="HV005_23">কাবিলপুর</string>
    <string name="HV005_24">দক্ষিণ খাটিয়ামারি (তালতলা)</string>
    <string name="HV005_25">পাতিলবাড়ি</string>
    <string name="HV005_26">পাগলার চর</string>
    <string name="HV005_27">খাটিয়ামারি (পূর্ব)</string>
    <string name="HV005_28">বোঁচাগাড়ি</string>
    <string name="HV005_29">কোচখালি</string>
    <string name="HV005_30">খামার কামারজানি</string>
    <string name="HV006">অক্ষাংশ</string>
    <string name="HV007">দ্রাঘিমাংশ</string>
    <string name="HV008">ইউনিয়ন</string>
    <string name="HV009">উপজেলা</string>
    <string name="CA">RCT Group</string>
    <string name="CA_1">নিয়ন্ত্রণ গ্রুপ</string>
    <string name="CA_2">পোষ্টার</string>
    <string name="CA_3">ডায়রি</string>
    <string name="HV010">সাক্ষাৎকার গ্রহণকারীর কোড</string>
    <string name="HV011">তত্ত্বাবধায়কের কোড</string>
    <string name="HV012">সাক্ষাৎকার গ্রহনের তারিখ</string>
    <string name="HV013">সাক্ষাৎকার শুরু হওয়ার সময় </string>
    <string name="HV014">যোগাযোগের তথ্য: নাম</string>
    <string name="HV015">যোগাযোগের তথ্য: মোবাইল ফোন নাম্বার</string>
    <string name="HV016">যোগাযোগের তথ্য: মোবাইল ফোনটি কার</string>
    <string name="HV016_1">পরিবার প্রধান</string>
    <string name="HV016_2">প্রতিবেশি</string>
    <string name="HV016_3">স্ত্রী</string>
    <string name="HV016_4">অন্যান্য</string>
    <string name="Section_2">২য় বিভাগঃ পরিবারের সদস্য সমূহ </string>
    <string name="HV101">HV101: MID</string>
    <string name="HV102">HV102: নাম</string>
    <string name="HV103">HV103: পরিবার প্রধানের সাথে সম্পর্ক</string>
    <string name="HV103_code1_1">পরিবার প্রধান</string>
    <string name="HV103_code1_2">স্বামী/স্ত্রী</string>
    <string name="HV103_code1_3">ছেলে</string>
    <string name="HV103_code1_4">মেয়ে</string>
    <string name="HV103_code1_5">ভাই/বোন</string>
    <string name="HV103_code1_6">বাবা/মা</string>
    <string name="HV103_code1_7">শ্বশুর/শাশুড়ি</string>
    <string name="HV103_code1_8">পুত্র বধু/মেয়ে জামাই</string>
    <string name="HV103_code1_9">দুলাভাই/ভাবী</string>
    <string name="HV103_code1_10">নাতি/নাতনি</string>
    <string name="HV103_code1_11">ভাইগ্না/ভাগ্নি</string>
    <string name="HV103_code1_12">অন্যান্য আত্মীয়</string>
    <string name="HV103_code1_13">লজিং মাষ্টার</string>
    <string name="HV103_code1_14">স্থায়ী কাজের লোক</string>
    <string name="HV103_code1_15">অন্যান্য, আত্মীয় নয় এমন</string>
    <string name="HV104">HV104: উক্ত সদস্য কি কোনভাবে অক্ষম</string>
    <string name="HV105">HV105: বয়স</string>
    <string name="HV106">HV106: লিঙ্গ </string>
    <string name="HV106_1">পুরুষ</string>
    <string name="HV106_2">নারী</string>
    <string name="HV107">HV107: বর্তমানে স্কুলে যাচ্ছে</string>
    <string name="HV108">HV108: বর্তমানে বাড়িতে আছেন</string>
    <string name="HV109">HV109: বিগত ১২ মাসে অস্থায়ীভাবে কোথাও বসবাস করেছেন?</string>
    <string name="HV110">HV110: বাসস্থান পরিবর্তনের কারণ</string>
    <string name="HV110_code2_1">মঙ্গা</string>
    <string name="HV110_code2_2">বন্যা</string>
    <string name="HV110_code2_3">জীবিকা উপার্জনের তাগিদে</string>
    <string name="HV110_code2_4">বেকারত্ব</string>
    <string name="HV110_code2_5">ঋণ পরিশোধ</string>
    <string name="HV110_code2_6">অন্যান্য</string>
    <string name="HV111">HV111: বৈবাহিক অবস্থা</string>
    <string name="HV111_code3_1">অবিবাহিত</string>
    <string name="HV111_code3_2">বিবাহিত</string>
    <string name="HV111_code3_3">বিধবা/বিপত্নীক</string>
    <string name="HV111_code3_4">তালাক প্রাপ্ত</string>
    <string name="HV111_code3_5">আলাদা থাকেন</string>
    <string name="HV112">HV112: উচ্চতা (ইঞ্চিতে)</string>
    <string name="HV113">HV113: ওজন (কেজিতে)</string>
    <string name="HV114">HV114: স্বাক্ষর</string>
    <string name="HV114_code4_1">পড়তে লিখতে পারেন না</string>
    <string name="HV114_code4_2">শুধুমাত্র দস্তখৎ</string>
    <string name="HV114_code4_3">পড়তে পারেন</string>
    <string name="HV114_code4_4">পড়তে লিখতে পারেন</string>
    <string name="HV115">HV115: শিক্ষাগত যোগ্যতা (সর্বোচ্চ পাশকৃত শ্রেণী) </string>
    <string name="HV115_code5_0">শিক্ষা নেই</string>
    <string name="HV115_code5_1">১ম শ্রেণী</string>
    <string name="HV115_code5_2">২য় শ্রেণী</string>
    <string name="HV115_code5_3">৩য় শ্রেণী</string>
    <string name="HV115_code5_4">চতুর্থ শ্রেণী</string>
    <string name="HV115_code5_5">পিইসি/সমমান</string>
    <string name="HV115_code5_6">ষষ্ঠ শ্রেণী</string>
    <string name="HV115_code5_7">সপ্তম শ্রেণী</string>
    <string name="HV115_code5_8">জেএসসি/সমমান</string>
    <string name="HV115_code5_9">৯ম শ্রেণী</string>
    <string name="HV115_code5_10">মাধ্যমিক/সমমান</string>
    <string name="HV115_code5_11">উচ্চ মাধ্যমিক/সমমান</string>
    <string name="HV115_code5_12">ভোকেশনাল</string>
    <string name="HV115_code5_13">কারিগরি শিক্ষা</string>
    <string name="HV115_code5_14">সম্মান</string>
    <string name="HV115_code5_15">অন্যান্য</string>
    <string name="HV116">HV116: উপার্জন করেন?</string>
    <string name="HV117">HV117: মুখ্য পেশা</string>
    <string name="HV117_code6_1">কৃষিকাজ </string>
    <string name="HV117_code6_2">গবাদি পশু পাখি </string>
    <string name="HV117_code6_3">শিল্প উদ্যোগ</string>
    <string name="HV117_code6_4">বানিজ্য</string>
    <string name="HV117_code6_5">পরিবহন (নৌকা, রিকশা ইত্যাদি)</string>
    <string name="HV117_code6_6">নির্মাণ কাজ</string>
    <string name="HV117_code6_7">স্ব নির্ভর</string>
    <string name="HV117_code6_8">বিবিধ কাজকর্ম</string>
    <string name="HV117_code6_9">অন্যান্য </string>
    <string name="HV118">HV118: গৌণ পেশা</string>
    <string name="HV118_code6_1">কৃষিকাজ </string>
    <string name="HV118_code6_2">গবাদি পশু পাখি </string>
    <string name="HV118_code6_3">শিল্প উদ্যোগ</string>
    <string name="HV118_code6_4">বানিজ্য</string>
    <string name="HV118_code6_5">পরিবহন (নৌকা, রিকশা ইত্যাদি)</string>
    <string name="HV118_code6_6">নির্মাণ কাজ</string>
    <string name="HV118_code6_7">স্ব নির্ভর</string>
    <string name="HV118_code6_8">বিবিধ কাজকর্ম</string>
    <string name="HV118_code6_9">অন্যান্য </string>
    <string name="Section_3">৩য় বিভাগঃ বসবাস পরিস্থিতি</string>
    <string name="HV201">আপনার বাড়িতে কয়টি কক্ষ আছে?</string>
    <string name="HV202">অন্য কোন পরিবার কি আপনার সাথে একই রান্নাঘর ব্যাবহার করেন?</string>
    <string name="HV202_1"> হ্যাঁ</string>
    <string name="HV202_2">না</string>
    <string name="HV203">কি ধরণের চুলা ব্যাবহার করেন?</string>
    <string name="HV203_1"> বৈদ্যুতিক</string>
    <string name="HV203_2">গ্যাস</string>
    <string name="HV203_3">অন্যান্য</string>
    <string name="HV204">রান্নার জ্বালানী হিসেবে প্রধানত কি ব্যাবহার করেন?</string>
    <string name="HV204_1">চেলা কাঠ</string>
    <string name="HV204_2">কেরোসিন</string>
    <string name="HV204_3">গোবর</string>
    <string name="HV204_4">কয়লা</string>
    <string name="HV204_5">এলপি গ্যাস</string>
    <string name="HV204_6">অন্যান্য </string>
    <string name="HV205">মূল বসতবাড়ির দেয়াল কি দিয়ে তৈরি?</string>
    <string name="HV205_1">ছন/ বাঁশ/পলিথিন/ প্লাস্টিক/ ক্যানভাস </string>
    <string name="HV205_2">মাটি/ কাঁচা ইট  </string>
    <string name="HV205_3">টিন (সিআই শিট) </string>
    <string name="HV205_4">কাঠ </string>
    <string name="HV205_5">ইট/ সিমেন্ট </string>
    <string name="HV205_6">অন্যান্য  </string>
    <string name="HV206">মূল বসতবাড়ির মেঝে কি দিয়ে তৈরি? </string>
    <string name="HV206_1">ছন/ বাঁশ/ ক্যানভাস  </string>
    <string name="HV206_2">মাটি/ কাঁচা ইট  </string>
    <string name="HV206_3">টিন (সিআই শিট)   </string>
    <string name="HS201">আপনার কোন লোন আছে?</string>
    <string name="HS202">লোনের উৎস</string>
    <string name="HS202_1">জিইউকে/ অন্যান্য এনজিও</string>
    <string name="HS202_2">বন্ধু, আত্মীয়স্বজন</string>
    <string name="HS202_3">ক্ষুদ্র ঋণ সংস্থা</string>
    <string name="HS202_4">মহাজন</string>
    <string name="HS202_5">অন্যান্য</string>
    <string name="HS204">পরিশোধ যোগ্য লোন (টাকায়)</string>
    <string name="HS205">কিস্তি পরিমাণ</string>
    <string name="HS206">কিস্তি হার</string>
    <string name="HS207">কিস্তি হারের সংখ্যা</string>
    <string name="HS208">আপনার কোন সঞ্চয় রয়েছে?</string>
    <string name="HS209">কোথায় সঞ্চয় করা আছে?</string>
    <string name="HS209_1">ব্যাংক</string>
    <string name="HS209_2">পোষ্ট অফিস</string>
    <string name="HS209_3">গ্রামীণ প্রতিষ্ঠান/ সমবায়</string>
    <string name="HS209_4">বাড়িতে (নগদ)</string>
    <string name="HS209_5">বাড়িতে (সঞ্চিত শস্য)</string>
    <string name="HS210">মোট পরিমাণ</string>
    <string name="HS211">বিগত বছরে কাউকে টাকা ধার দিয়েছিলেন?</string>
    <string name="HS212">পরিমাণ (টাকায়)</string>
    <string name="HS213">ফেরতযোগ্য টাকার পরিমাণ</string>
    <string name="HS203">hs203</string>
</resources>