<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/LinearLay_consent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">



            <Button
                android:text="section10"
                android:id="@+id/btn_section10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--start of section 10 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS201"
                    android:textSize="@dimen/font_size"
                    />

                <RadioGroup
                    android:id="@+id/rg_hs201_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbt_yes_hs201_mid1"
                        android:text="@string/ha"
                        android:textSize="@dimen/font_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <RadioButton
                        android:id="@+id/rbt_no_hs201_mid1"
                        android:text="@string/na"
                        android:textSize="@dimen/font_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />


                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colordivide"
                >

                <TextView
                    android:id="@+id/tv_hs202"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS202"
                    android:textSize="@dimen/font_size"

                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/rg_hs202"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbt_1_hs202"
                            android:text="@string/HS202_1"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbt_2_hs202"
                            android:text="@string/HS202_2"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbt_3_hs202"
                            android:text="@string/HS202_3"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbt_4_hs202"
                            android:text="@string/HS202_4"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbt_5_hs202"
                            android:text="@string/HS202_5"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />



                    </RadioGroup>

                    <EditText
                        android:id="@+id/et_hs202_others"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/HS202_5"
                        android:textSize="@dimen/font_size"

                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:id="@+id/tv_hs203"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS203"
                    android:textSize="@dimen/font_size"
                    android:layout_gravity="fill"
                    />

                <EditText
                    android:id="@+id/et_hs203_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colordivide"
                >

                <TextView
                    android:id="@+id/tv_hs204"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS204"
                    android:textSize="@dimen/font_size"
                    android:layout_gravity="fill"
                    />

                <EditText
                    android:id="@+id/et_hs204_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tv_hs205"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS205"
                    android:textSize="@dimen/font_size"
                    android:layout_gravity="fill"
                    />

                <EditText
                    android:id="@+id/et_hs205_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colordivide"
                >

                <TextView
                    android:id="@+id/tv_hs206"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS206"
                    android:textSize="@dimen/font_size"
                    android:layout_gravity="fill"
                    />

                <EditText
                    android:id="@+id/et_hs206_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tv_hs207"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS207"
                    android:textSize="@dimen/font_size"
                    android:layout_gravity="fill"
                    />

                <EditText
                    android:id="@+id/et_hs207_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colordivide"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS208"
                    android:textSize="@dimen/font_size"
                    />

                <RadioGroup
                    android:id="@+id/rg_hs208_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbt_yes_hs208_mid1"
                        android:text="@string/ha"
                        android:textSize="@dimen/font_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <RadioButton
                        android:id="@+id/rbt_no_hs208_mid1"
                        android:text="@string/na"
                        android:textSize="@dimen/font_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />


                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colordivide"
                >

                <TextView
                    android:id="@+id/tv_hs209"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS209"
                    android:textSize="@dimen/font_size"

                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/rg_hs209"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbt_1_hs209"
                            android:text="@string/HS209_1"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbt_2_hs209"
                            android:text="@string/HS209_2"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbt_3_hs209"
                            android:text="@string/HS209_3"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbt_4_hs209"
                            android:text="@string/HS209_4"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbt_5_hs209"
                            android:text="@string/HS209_5"
                            android:textSize="@dimen/font_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />



                    </RadioGroup>

                    <EditText
                        android:id="@+id/et_hs209_others"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/HS209_5"
                        android:textSize="@dimen/font_size"

                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colordivide"
                >

                <TextView
                    android:id="@+id/tv_hs210"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS210"
                    android:textSize="@dimen/font_size"
                    android:layout_gravity="fill"
                    />

                <EditText
                    android:id="@+id/et_hs210_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS211"
                    android:textSize="@dimen/font_size"
                    />

                <RadioGroup
                    android:id="@+id/rg_hs211_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbt_yes_hs211_mid1"
                        android:text="@string/ha"
                        android:textSize="@dimen/font_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <RadioButton
                        android:id="@+id/rbt_no_hs211_mid1"
                        android:text="@string/na"
                        android:textSize="@dimen/font_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />


                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colordivide"
                >

                <TextView
                    android:id="@+id/tv_hs212"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS212"
                    android:textSize="@dimen/font_size"
                    android:layout_gravity="fill"
                    />

                <EditText
                    android:id="@+id/et_hs212_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tv_hs213"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/HS213"
                    android:textSize="@dimen/font_size"
                    android:layout_gravity="fill"
                    />

                <EditText
                    android:id="@+id/et_hs213_mid1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <!--end of section 10 -->


        </LinearLayout>
    </LinearLayout>
</ScrollView>